--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "wall-app",
+  "name": "wallapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://saurabhgupta26.github.io/wall-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
